# tidis

./: .gitlab-ci.yml  Cargo.toml  Dockerfile.kvstore  Makefile  config.ytl-nvme.toml  replace_tikv_client_path.sh  rust-toolchain.toml
src/: connection.rs  frame.rs.x  lib.rs  parse.rs  server.rs  utils.rs
src/attribute/: attribute.rs
src/cmd/: mix.rs  mod.rs
src/metrics/: mod.rs
src/tikv/: client.rs  frame.rs  mix.rs  mod.rs
src/tikv/encoding/: encode.rs
