[package]
authors = ["The Tidis Authors"]
edition = "2018"
name = "tidis"
version = "2.0.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tikv/tidis"
description = """
The service layer for TiKV, a distributed key-value store, powered by PingCAP.
"""

[[bin]]
name = "tidis-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.0"
atoi = "0.3.2"
bytes = "1"
chrono = "0.4"
crc = "2.0"
structopt = "0.3.14"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = { version = "2.4" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.1", features = ["rt"] }
tikv-client = { git = "https://git.garena.com/yin.han/tikv-client-rust.git", branch = "tikv-redis" }
#tikv-client = { path = "../client-rust" }
lazy_static = "1.4.0"
thiserror = "1"
prometheus = { version = "0.13.0", features = ["process"]}
pprof = { version = "0.9", features = ["flamegraph", "protobuf-codec"] }
hyper = { version = "0.14.17", features = ["full"] }
async-std = { version = "1.11.0", features = ["unstable"] }
async-tls = { version = "0.11.0", features = ["server"], default-features = false }
rustls = "0.19.0"
rand = {version = "0.8.5", features = ["small_rng"] }
regex = "1"
toml = { version = "0.5.8" }
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", default-features = false }
mlua = { version = "0.7.4", features = ["lua51", "async", "vendored", "macros", "send"]}
sha1 = "0.10.0"
hex = "0.4.3"
# tikv_alloc = { workspace = true }
jemallocator = "0.5"

# [workspace.dependencies]
# tikv_alloc = { path = "components/tikv_alloc" }


[workspace]
# See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
# Without resolver = 2, using `cargo build --features x` to build `cmd`
# will _not_ propagate the feature `x` into `cmd`'s direct dependencies.
resolver = "2"
members = [
  # "components/tikv_alloc",
]

[features]
# default = ["tikv_alloc/jemalloc"]

[profile.dev]
debug            = true # required for line numbers in tests, see tikv #5049
debug-assertions = true
incremental      = true
opt-level = 0
codegen-units = 4
lto = false
panic = 'unwind'
overflow-checks = false
rpath = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = "thin"
incremental = false
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false
